# GuardX

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-ghcr.yml
guardx/: __main__.py  cli.py  mcp_server.py
guardx/api/: __init__.py  routes.py
guardx/core/: __init__.py  compliance.py  database.py  delta_report.py  events.py  plugins.py  rate_limiter.py  rollback.py  scheduler.py  scope.py  state.py  webhooks.py
guardx/llm/: client.py  prompts.py
guardx/nuclei-templates/: default-credentials.yaml  exposed-admin.yaml  exposed-backup.yaml  exposed-debug.yaml  exposed-env.yaml  exposed-git.yaml  information-disclosure.yaml  missing-security-headers.yaml  open-redirect.yaml  weak-cors.yaml
guardx/reporting/: __init__.py  generator.py
guardx/skills/: __init__.py  _template.py  api_security.py  auth_bypass.py  brute_force.py  command_injection.py  cors_misconfig.py  csrf.py  directory_traversal.py  dns_security.py  exposed_services.py  file_upload.py  idor.py  info_disclosure.py  insecure_deserialization.py  js_secrets.py  jwt_attacks.py  missing_headers.py  open_redirect.py  race_condition.py  sql_injection.py  ssh_hardening.py  ssl_deep.py  ssl_tls.py  ssrf.py  ssti.py  subdomain_takeover.py  xss.py
guardx/tools/: api_fuzzer.py  cms_scanner.py  cors_scanner.py  dir_bruteforce.py  dns_analyzer.py  http_headers.py  http_request.py  js_analyzer.py  nmap_scan.py  nuclei_scan.py  port_check.py  screenshot.py  sql_check.py  ssh_exec.py  (+6 more)
web/: app.py
(+5 files in other folders)
